# dout

./: CMakeLists.txt  README.md
cmake/: doutConfig.cmake  doutConfigVersion.cmake
examples/: example1.cpp
include/: dout.hpp  version.hpp
include/dout/: dout.hpp  version.hpp
src/: main.cc
